# QuarkEngine

./: AGENTS.md  CMakeLists.txt
docs/: architecture-overview.md  code-conventions.md  commands.md  principles.md  roadmap.md  status.md  todo.md
quark/: CMakeLists.txt
quark/assets/shaders/: obb.vert  triangle.vert
quark/include/quark/: api.h  entrypoint.h  macro.h  primitives.h
quark/include/quark/core/: application.h  assert.h  camera.h  engine.h  log.h  window.h
quark/include/quark/world/: chunk.h
quark/src/core/: application.c  application.h  camera.c  camera.h  engine.c  event.c  event.h  input.c  input.h  logger.c  tracing.c  tracing.h  window.c  window.h
quark/src/platform/: clock.h  clock_win32.c  memory.h  memory_win32.c  thread.h  thread_win32.c
quark/src/renderer/: backend.c  backend.h  buffer.c  buffer.h  device.c  device.h  macro.h  swapchain.c  swapchain.h  vk.h
quark/src/renderer/vulkan/: backend.c  backend.h  device.c  device.h  swapchain.c  swapchain.h  vk.h
testbed/: CMakeLists.txt
testbed/src/: main.c
